[gd_scene load_steps=3 format=3 uid="uid://b35vargbut5yy"]

[ext_resource type="Script" path="res://entites/spawner/spawner.gd" id="1_mrlmb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o87m3"]
radius = 93.0484

[node name="spawner" type="Node2D"]
script = ExtResource("1_mrlmb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_o87m3")

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
